[tool.poetry]
name = "OdinRobot"
version = "0.1.0"
description = ""
authors = ["Luke <me@luuke.ml>"]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.1"
alphabet-detector = "^0.0.7"
beautifulsoup4 = "^4.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
